Enhance WebController for improved movie scheduling and customer management
- Added ReviewRepository to WebController for handling reviews.
- Updated showtime logic to include afternoon shows and adjusted durations based on movie titles.
- Enhanced data seeding to include additional theaters, showrooms, and promotions.
- Refactored customer creation to include promotions and payment methods.
- Introduced new methods for ticket issuance and time manipulation.
- Cleaned up unused imports and improved code organization.